<resources>
    <string name="app_name">Rat_Tracking_Application</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email (required)</string>
    <string name="prompt_password">Password (required)</string>
    <string name="prompt_admin">Register as an Admin?</string>
    <string name="action_sign_in">Username (required)</string>
    <string name="register">Register</string>

    <string name="title_activity_logout">LogoutActivity</string>

    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
</resources>
